--- a/ios/VirtualEarth/VirtualEarth/VirtualEarth-Info.plist
+++ b/ios/VirtualEarth/VirtualEarth/VirtualEarth-Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>BingMapsKey</key>
+	<string>AlqaDPxrpaMRDYhYJJQM10FqlVH02jzM0rrmxX6F0LfW4I_45tTjVm6Pp4yiXnLE</string>
 </dict>
 </plist>
