--- a/ios/VirtualEarth/VirtualEarth/VirtualEarth-Info.plist
+++ b/ios/VirtualEarth/VirtualEarth/VirtualEarth-Info.plist
@@ -37,6 +37,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>BingMapsKey</key>
-	<string>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
+	<string>XXXXXXXXXX</string>
 </dict>
 </plist>
