--- a/ios/AugmentedReality/AugmentedReality/AugmentedReality-Info.plist
+++ b/ios/AugmentedReality/AugmentedReality/AugmentedReality-Info.plist
@@ -29,6 +29,11 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>still-camera</string>
+		<string>auto-focus-camera</string>
+		<string>front-facing-camera</string>
+		<string>camera-flash</string>
+		<string>video-camera</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
