--- a/ios/Wibree/Wibree/Wibree-Info.plist
+++ b/ios/Wibree/Wibree/Wibree-Info.plist
@@ -24,6 +24,12 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
+		<string>location</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -35,11 +41,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-    <key>UIBackgroundModes</key>
-    <array>
-		<string>bluetooth-central</string>
-        <string>bluetooth-peripheral</string>
 	</array>
 </dict>
 </plist>
