--- a/android/Nexus/project.properties
+++ b/android/Nexus/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-20
 android.library.reference.1=../../../../../../workspace/appcompat_v7
+android.library.reference.2=../../../../../../../../../Applications/Development/adt-bundle-mac-x86_64/sdk/extras/google/google_play_services/libproject/google-play-services_lib
