--- a/android/Nexus/AndroidManifest.xml
+++ b/android/Nexus/AndroidManifest.xml
@@ -8,7 +8,17 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
     
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    
+    <permission android:name="com.example.nexus.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.example.nexus.permission.C2D_MESSAGE" />
+    <!--
+    <uses-permission android:name="com.example.nexus.c2dm.permission.RECEIVE" />
+    -->
 
     <application
         android:allowBackup="true"
@@ -25,6 +35,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailActivity" />
+        <receiver
+            android:name=".GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.example.nexus" />
+            </intent-filter>
+        </receiver>
+        <service android:name=".GcmIntentService" />
     </application>
 
 </manifest>
