--- a/android/PerformanceMonitor/app/src/main/AndroidManifest.xml
+++ b/android/PerformanceMonitor/app/src/main/AndroidManifest.xml
@@ -18,4 +18,8 @@
         </activity>
     </application>
 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <supports-gl-texture android:name="GL_OES_compressed_ETC1_RGB8_texture" />
+    <supports-gl-texture android:name="GL_OES_compressed_paletted_texture" />
+
 </manifest>
